--- a/src/frontend/ui.css
+++ b/src/frontend/ui.css
@@ -39,11 +39,11 @@
 }
 
 .yellow {
-  background-color: #1230f3;
+  background-color: #f3a812;
 }
 
 .empty {
-  background-color: #f7f4f4;
+  background-color: #c7c7c7;
 }
 
 
